# serializer version: 1
# name: test_get[json]
  dict({
    'created_at': str,
    'description': '',
    'id': 1,
    'latest_release': None,
    'name': 'ml-plant-viruses',
    'release_count': 3,
    'releases': list([
      dict({
        'created_at': str,
        'download_url': 'http://www.morales.biz/',
        'github_url': 'http://wiggins.com/',
        'id': 3,
        'name': 'cknqtDSSXFzHxwTjtpho',
        'published_at': '2023-09-26T04:33:42Z',
        'ready': False,
        'size': 6016,
      }),
      dict({
        'created_at': str,
        'download_url': 'https://www.snyder.com/',
        'github_url': 'https://carlson.com/',
        'id': 1,
        'name': 'DpjjFIyeNTWRUWCuKoQS',
        'published_at': '2009-06-13T09:32:41Z',
        'ready': False,
        'size': 4509,
      }),
      dict({
        'created_at': str,
        'download_url': 'http://walker.com/',
        'github_url': 'https://www.ruiz.org/',
        'id': 2,
        'name': 'TVHuIhJxeMChNzFJEUSg',
        'published_at': '1996-05-28T05:17:47Z',
        'ready': False,
        'size': 6789,
      }),
    ]),
  })
# ---
# name: test_list[json]
  dict({
    'items': list([
      dict({
        'created_at': str,
        'description': '',
        'id': 2,
        'latest_release': None,
        'name': 'ml-insect-viruses',
        'release_count': 3,
      }),
      dict({
        'created_at': str,
        'description': '',
        'id': 1,
        'latest_release': None,
        'name': 'ml-plant-viruses',
        'release_count': 3,
      }),
    ]),
    'last_synced_at': None,
  })
# ---
